fix: adjust CardContent overflow behavior and hide scrollbar in Webkit browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,8 +77,8 @@ body {
 
 /* Webkit browsers (Chrome, Safari, newer Edge) */
 ::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
+  width: 0px;
+  height: 0px;
 }
 
 ::-webkit-scrollbar-track {
